<resources>
    <string name="app_name">Ошхона</string>
    <string name="text_main_page">Ошхона</string>
    <string name="banner_ad_unit_id">ca-app-pub-8967799784519571/7808024842</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recipe1_1_1">\t1.\tАввал хамаи махсулотхоро бояд реза кунем . Хар кас метавонад бо тарзии худ реза кунад. Интихоби мо чунин аст: гуштро бо шакли квадрати, пиезро нимдоира, сабзиро доирашакр, булгориро чоркунча, помидорро хам чоркунчаи майдатар реза карда картошкаву чугориро низ ба 2,3 кисм таксим мекунем. Вале метавонед шаклхои худро хам истифода баред. Резаи махсулотхои моро метавонед дар аксхо зерин бо резахои худ мукоиса кунед.\n\t2.\tБаъди резаи хамаи махсулотхо, ба деги гарм равганро меандозем ва баъди гарм шудани равган гуштхоро меандозем.</string>
    <string name="recipe1_1_2">\t3.\tБаъди гуштро каме дар равган бирен кардан, чисноки майда рeзакарда ва пиезро андозед. Боз каме бирен мекунем.</string>
    <string name="recipe1_1_3">\t4.\tБаъди 15-20 дакика бирен кардан махсулотхои мондагиро бар болои якдиган гузошта мебароем. Аввал сабзи, баъд булгори, баъдан картошка. Тарзи гузоштани сабзавотхоро метавонем аз аксхо таъкиб кунед.</string>
    <string name="recipe1_1_4">\t5.\tБаъд чугори ва помидорро низ мегузорем. Агар чиснокро бисер дуст доред метавонед боз чиснок андозед. </string>
    <string name="recipe1_1_5">\t6.\tДар охир кабудихо ва зиравориро меандозем. Баъдан ба дег об рехта 40-45 дакика дар оташи нисбатан пасттар дам медихем. Микдори об бояд аз сатхи махсулотхо каме пасттар бошад. Вале агар сер об хохед боз хам метанед об резед.</string>
    <string name="recipe1_1_6">\t7.\tБаъде ки таом тайер мешавад, намаки дамламаро кифоя мекунем ва барои хурдан пешкаш мекунем.</string>
    <string name="recipe1_1_7">Иштихои том!</string>
    <string name="recipe1_2_1">\t1.\tПиёзро майда реза карда бо фарш ва биринҷи шушта омехта зираворӣ, кабутӣ ва намакро ҳам андохта фарши токкабобро тайёр мекунем. </string>
    <string name="recipe1_2_2">\t2.\tБаъде ки фарш тайёр мешавад, баргҳои токро ба оби гарми ҷӯшон ба муддати 5 дақиқа мегузоред. </string>
    <string name="recipe1_2_3">\t3.\tБаъдан аз фарши тайёрро кам-кам ба токбаргҳо гузошта мебароем.</string>
    <string name="recipe1_2_4">\tБарои пачондани токкабоб якум қисми поёнии токбарг фаршро мепушонем.</string>
    <string name="recipe1_2_5">\tАнакнун ду тарафи барашро қат мекунем</string>
    <string name="recipe1_2_6">\tБаъдан ҳамчун рулет фаршро ба тарафи нӯги барг тоб медиҳем.</string>
    <string name="recipe1_2_7">\t4.\tБаъде ки ҳамаи фаршро бо токбарг печонида баромадем, мегузарем ба тайёр кардани шурбо. Барои ин мо ҳамаи сабзавотҳоро дилхоҳ реза карда ба дег мегузорем. Баъдан агар равгани зард дошта бошед як чанд порча карда ба болои сабзавотҳо мегузорем. Агар равгани думба дошта бошед, бо сабзавотҳо меомезед. Баъдан зиравори ва намакро меандозем. Баъдан токкабобҳхоро ба  болои сабзавотҳо гузошта мебароем.</string>
    <string name="recipe1_2_8">\t5.\tБаъдан ба дег 1-2 пиёла об рехта сари дегро махкам мепушонем. Дар оташи паст 40 дакика дам медихем. </string>
    <string name="recipe1_2_9">\t6.\tТаомро метавонед барои таҳаммул пешниҳод кунед.</string>
    <string name="recipe1_2_10">\tИштиҳои том.</string>
    <string name="recipe1_4_1">\t1.\tРавгани зард ё равгани загерро гарм карда ба он чаккаро меанддозем. Намак ва мурчро хам меандозем. Агар чакка каме сахттар бошад об низ андозед</string>
    <string name="recipe1_4_2">\t2.\tБадан фатирхоро ба бурдахо таксим карда ба табак мегузорем. Агар фатир надошта бошед нонро метавонед истифода баред
</string>
    <string name="recipe1_4_3">\t3.\tАз болои бурдахои фатир чаккаи гарм кардаро меандозем</string>
    <string name="recipe1_4_4">\tБа болояш метавонем салати бо помидор ва бодиринг тайёркардаро резем.</string>
    <string name="recipe1_4_5">\t4.\tБа болояш кабудихоро низ реза карда резед ва барои тахаммул пешниход кунед</string>
    <string name="recipe1_4_7">Иштихои том!</string>
    <string name="recipe1_5_1">\t1.\tДумба ба кубхои 3х3см реза мекунем. Гуштро ба кисмхои нисбатан калон реза мекунем. Пиёзхоро бо шакли нимдоира реза карда мебароем. Сабзиро бошад тунуктар реза мекунем.\n\t2.\tАнакнун равганро дар дег гарм карда думбахоро дар равган об кунед. Баъде каме об кардан чаззаи тайёршударо аз дег бароред.</string>
    <string name="recipe1_5_2">\t3.\t Баъдан пиёзро ба дег андохта то ранги сурх шуданаш бирён кунед. Ранги пиёз ранги ошро маълум мекунад.Агар ранги ошро баландтар (равшантар) кардан хоҳед, пиёзро камтар сурх кунед. Вале агар хохед ки ранги ош ториктар шавад, пиёзро бисертар бирен кунед.</string>
    <string name="recipe1_5_3">\t4.\tВақте, ки пиёз сурх шуд, метавонед гушт ва намак андозед. Гуштро то каҳваранг шуданаш бирен кунед.</string>
    <string name="recipe1_5_4">\t5.\tАнакнун, сабзихоро андозед ва ба муҳлати 10-15 дақиқа бирен кунед. Фаромуш накунед, доимо бояд дегро тез тез омезем, вагарна дар лаби дег мечаспанд.</string>
    <string name="recipe1_5_5">\t6.\tБаъд ба дег об мерезем ва баъде ки оби оши чушиданро сар мекунад, ба муҳлати 5-10 дақиқа дар оташи нисбатан пастдар мегузорем то бисёртар чушад.</string>
    <string name="recipe1_5_6">	\t7.\tДар ин мухлат биринчро шуста мебароем ва вакте ки зирбаки ош тайёр шуд биринчро аз лаби дег сар карда ба миёна андохта мебароем.</string>
    <string name="recipe1_5_7">	\t8.\tПас аз андохтани биринч,камтар об меандзем ва биринчро баробар паҳн кунед. Миқдори об бояд аз лаби биринч 1-1.5см баландтар бошад. Пас аз 5-7 дақиқа танҳо биринчро меомезем то ин, ки биринч баробар пазад.Махсулотхоро якчоя то тайёр шудани ош наомезед.</string>
    <string name="recipe1_5_8">	\t9.\tВақте, ки об куллан бухор шуда меравад, лабхои ошро ба миён оварда мисли куҳ кунед. Камтар зира ва мавиз андозем. Аз болои ош то лаби дег пушти қошуқро ва кафлезро истифоа бурда метавонед якчанд сурохи кунед. Баъдан, оташро хеле паст кунеа болои дегро хуб махкам кунед, ва ба муддати 15-20 дақиқа дам дихед.</string>
    <string name="recipe1_5_9">	\t10.\tВақте, ки ош таёр мешавад, гуштхоро гирифта биринчу сабзиро омезед.</string>
    <string name="recipe1_5_10"> \t11.\t Аввал бирингу сабзиро ба табак гузошта аз болои он гушт, думбаро мегузоред ва барои тахаммул пешниход кунед.</string>
    <string name="recipe1_5_11">Иштиҳои том!!!</string>
    <string name="recipe1_6_1">\t1.\tАввал хамир мебозем. Орд, об, тухм ва намакро омехта хамир тайёр мекунем ва каме дам медием. То хамир дам мегирад гушт, пиёз, равгани думбаро майда реза карда ба он намак ва зираворихоро меандозем</string>
    <string name="recipe1_6_2">\t2.\tНазар ба мантуи одди хамири ин мантуро каме гавзтар мекунем. Вагарна метавонад хамир канда шавад дар вакти пухтан. Барои хамин такрибан 20-22 гр хамирро барои як манту истифода баред. Хамири мантуро ин тавр боз мекунем.</string>
    <string name="recipe1_6_3">\t3.\tМанту метавонад кушода шавад. Барои кушода нашуданаш бояд сахт махкам кунед.</string>
    <string name="recipe1_6_4">\t4.\tАнакнун мантухоро дар мантупашак гузоршта 20 - 25 дакика дар буг мепазем. Дар давоми 20-25 дакика мантухо каме хом тайёр мешаванд. Баъди он каме мантухоро хунук мекунем. \n\t4.\tБаъдан мантухои хунукшударо дар равгани гарм зирбонида мекирем.</string>
    <string name="recipe1_6_5">\t5.\tПухтани мантухоро аз зардии хамир мефахмем. Мантухо ки тайёр шуд метавонед, пешкаш кунед.</string>
    <string name="recipe1_6_6"> Иштихои том!</string>
    <string name="recipe1_7_1">\t1.\tАввал хамири хонумро тайёр мекунем. Орд, об, намак ва тухмро омехта хамир тайёр мекунем. Хамири тайёршударо ба 2-3 кисм таксим карда ба салафан андохта каме дам медихем.</string>
    <string name="recipe1_7_2">\t2.\tТо он даме ки хамир дам мегирад мо метавонем фаршро тайёр кунем. Пиёз, гушт, картошкаро майда карда реза мекунем (думба дошта бошед онро хам реза кунед). Баъд намак ва зираворихоро меандозем. Каме равган хам андозед ва омезед. \n\t3.\tБаъдан хамирро гирифта тунук карда боз мекунед. Фаршхоро ба ба болои он мерезед.</string>
    <string name="recipe1_7_3">\t3.\tБаъд аз як тараф сар карда тоб дихед.</string>
    <string name="recipe1_7_4">\t4.\tХонумхои бохтаро ба мантупазак андохта 40-45 дакика дар буг пухта гиред. </string>
    <string name="recipe1_7_5">\t5.\tБаде ки хонум таёр мешавад, хонумхоро бо чакка метавонед пешниход кунед. Ва агар хохед, метавонед то хонум тайёр шуданаш, каме шурбочаи серпиёр тайёр мекунед ва аз болои хонумхо рехта барои таxаммул пешниход мекунед.</string>
    <string name="recipe1_7_6">\tИштихои том!</string>
    <string name="recipe1_8_1_1">\t2.\tБаъдан мо метавонем гушт, пиёз, картошкаро майда реза карда (агар думба дошта бошед онро чам реза кунед) намак ва зираворихоро меандозед ва меомезед. Каме равганхам дозед хуб мешавад.\n\t3.\tАнакнун хамирро тунук боз кунед, ва ба кисмхои такрибан 7-8 см ба 18-20 см-и буред</string>
    <string name="recipe1_8_2">\t4.\tБа хар кисм фарши тайёр кардаро монда бароед.</string>
    <string name="recipe1_8_1">\t1.\tЧун хонум аввал хамир тайёр мекунем ва то хамир дам мегирад дигар корхоро ба анчом мерасонем. Барои хамир орд, об, тухм ва намакро бо хам меомезем ва ба салафан андохта дам медихем. </string>
    <string name="recipe1_8_3">\t5.\tБаъдан кисми поёнии хамирро бо боло якчоя карда фаршро махкам мекунем.</string>
    <string name="recipe1_8_4">\t6.\tБаъдан хамирро чун поён печонед</string>
    <string name="recipe1_8_5">\tХамин тавр хамаи кисмхоро печонда бароед.</string>
    <string name="recipe1_8_6">\t7.\tДар мантупазак дар муддати 40-45 дакика пухта гиред.</string>
    <string name="recipe1_8_7">\t Гулхонумхои пухтаро метавонед бо шурбойа ё бо чакка барои хурдан пешниход кунед.</string>
    <string name="recipe1_8_8">Иштихои Том!</string>
    <string name="recipe1_9_1">\t1.\tАввал хамаи сабзавотхоро пок карда мегирем. Тарзи реза карданро бо хости дустоштаатон кунед.\n\t2.\tБаъдан равганро каме гарм карда гуштхоро андозед.</string>
    <string name="recipe1_9_2">\t3.\tБаъдан каме чиснокхоро андозед ва бирёнед</string>
    <string name="recipe1_9_3">\t4.\tБаъдан пиёзхоро андозед.</string>
    <string name="recipe1_9_4">\t5.\tВакте ки пиёзхо зард мешаванд, булгорихоро меандозед</string>
    <string name="recipe1_9_5">\t6.\tБаъди 2-3 дакика помидорхоро андозед.</string>
    <string name="recipe1_9_6">\t7.\tБаъдан картошкаро андозед</string>
    <string name="recipe1_9_7">\t8.\tБаъди камтар бирён кардан нонхоро андозед</string>
    <string name="recipe1_9_8">\t9.\tБаъдан каме об андозед ва дар оташи паст дам дихед. Вакте ки таомамон тайёр мешавад метавонед барои хурдан пешниход кунед</string>
    <string name="recipe2_2_1_1">\t2.\tДар ин муддат мо метавонем фаршро тайёр кунем. Барои он мо пиёзро майда реза мекунем ва бо фарш меомезем. Бояд пиёзро хело майда кунед то хамири мантучаро набурад. Баъдан ба он намак ва зиравориро меандозем.</string>
    <string name="recipe2_2_1">\t1.\tАввал хамирро тайёр кардан лозим аст. Барои он мо орд, об ва каме намакро омехта хамир тайёр мекунем ва дам медихем.</string>
    <string name="recipe2_2_2">\t3.\tФарш, ки тайёр шуд, хамири дам додаро боз карда ба чоркунчахои 4х4 см бурида мебароем. </string>
    <string name="recipe2_2_3">\t4.\tБа хар як хамири буридаги каме фарш меандозем. Баъдан ду тарафи хамирро якчоя карда мечаспонем.</string>
    <string name="recipe2_2_4">\t5.\tБаъдан тарафи хамириашро кат карда тоб медихем ва нугхоро мечаспонем</string>
    <string name="recipe2_2_5">\t6.\tБаъди тайёр кардани хамаи мантучахо, мантучахоро ба оби гарм андохта дар муддати 10-15 дакика мечушонем. Агар хохед мантучахо боз хам болаззаттар шаванд метавонед онхоро дар шурбо пазед</string>
    <string name="recipe2_2_6">\t7.\tБаъде ки мантуча тайёр шуданд, метавонед бо чакка пешниход кунед</string>
    <string name="recipe2_2_7">Иштихои том!</string>
</resources>